Sync framework changes from majora3.iinti.cn
Add configurations to block Swagger and Actuator endpoints when deployed in public networks, introduce a `PrivacyFilter` to enforce these restrictions, and optimize thread safety with `NoShakingValueCallback`. Simplify Docker build processes, enhance frontend error handling, and streamline proguard rules. Additionally, refactor logging, improve IP validation logic, and refine various utility methods for better maintainability.